--- a/MOD 2/Aula2/Codelab/index.html
+++ b/MOD 2/Aula2/Codelab/index.html
@@ -15,15 +15,15 @@
             </div>
             <div class="elemento-container">
                 <div class="elemento-item">
-                    <img src="static/orc.png" width="200" height="200">
+                    <img src="static/orc.png" alt="Imagem orc" width="200" height="200">
                     <p>Orc</p>
                 </div>
                 <div class="elemento-item">
-                    <img src="static/goblin.png" width="200" height="200">
+                    <img src="static/goblin.png" alt="Imagem goblin" width="200" height="200">
                     <p>Goblin</p>
                 </div>
                 <div class="elemento-item">
-                    <img src="static/feiticeira.png" width="200" height="200">
+                    <img src="static/feiticeira.png" alt="Imagem feiticeira" width="200" height="200">
                     <p>Feiticeira</p>
                 </div>
             </div>
@@ -32,15 +32,15 @@
             </div>
             <div class="elemento-container">
                 <div class="elemento-item">
-                    <img src="static/soco.png" width="200" height="200">
+                    <img src="static/soco.png" alt="Imagem soco" width="200" height="200">
                     <p>Soco</p>
                 </div>
                 <div class="elemento-item">
-                    <img src="static/arco.png" width="200" height="200">
+                    <img src="static/arco.png" alt="Imagem arco" width="200" height="200">
                     <p>Arco</p>
                 </div>
                 <div class="elemento-item">
-                    <img src="static/espada.png" width="200" height="200">
+                    <img src="static/espada.png" alt="Imagem espada" width="200" height="200">
                     <p>Espada</p>
                 </div>
             </div>
