--- a/MOD 2/Aula9/CalculadoraDano/index.html
+++ b/MOD 2/Aula9/CalculadoraDano/index.html
@@ -8,6 +8,9 @@
     <body onload="iniciar()">
         <div class="calculadora-dano">
             <div class="linha-container">
+                <img src="static/logo-blue-croped.gif" width="100" alt="Logo blue"/>
+            </div>            
+            <div class="linha-container">
                 <h1 class="titulo pula-linha">Calculadora de Dano</h1>
             </div>
 
